# bar-chart

./: .gitignore  CMakeLists.txt
includes/: FrontBackProvider.h  Manager.h  TextReader.h  TextReaderWorker.h
qml/: main.qml  qml.qrc
qml/custom/: ProgressBarCustom.qml
qml/js/: barChart.js
qml/pages/mainPage/: MainPage.qml
qml/pages/mainPage/components/: BarChart.qml  BarChartColumn.qml  BarChartProgressBar.qml  LeftBar.qml
src/: Manager.cpp  TextReader.cpp  TextReaderWorker.cpp  main.cpp
